# sourcecraft-research

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py  study_buddy_with_search.ipynb
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/: CUSTOMIZATION.md  GITHUB_CHECKLIST.md  LINKEDIN_POST.md  PROJECT_IDEAS.md
research_assistant/: __init__.py  agents.py  config.py  graph.py  models.py  prompts.py  search.py  text.py
tests/: test_graph.py  test_text.py
