[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sourcecraft-research"
version = "1.0.0"
description = "A source-aware three-agent research assistant built with LangGraph and Gemini."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = "MIT"
authors = [{ name = "Amr Belal" }]
dependencies = [
  "ddgs>=9.14,<10",
  "langchain-google-genai>=4.2,<5",
  "langgraph>=1.2,<2",
  "python-dotenv>=1.1,<2",
  "streamlit>=1.59,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<10",
  "pytest-cov>=6.2,<8",
  "ruff>=0.12,<1",
]

[tool.setuptools.packages.find]
include = ["research_assistant*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
